# ai-integraterz-cold-email

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGI1_INTEGRATION.md  ALWAYS_ON.md  ARCHITECTURE.md  BEST_PRACTICES.md  CHANGELOG.md  CLAUDE.md  Dockerfile  ETHOS.md  OPERATIONS.md  README.md  SELF_HEALING.md  TODOS.md  WALKTHROUGH.md  features.json  llms.txt  pyproject.toml
.agent/: README.md  agent.py  identity.json  state.json
.claude/: settings.json
.claude/agents/: main-agent.md
.claude/agi-1/: AGI1_RUN_REPORT.md  baseline.json  genome-pull.json  genome-push.json  rescore.json
.claude/healing/: history.json  patterns.json
.claude/hooks/: extract-checkpoint.sh
.claude/learning/: evolution.json  insights.json  observations.json
.github/workflows/: ci.yml
campaigns/capstone/: README.md  audience.md  offer.md  positioning.md  (+2 more)
config/: .env.example  models.yaml  smartlead.yaml
data/: skill_gaps.jsonl  tasks.db  voice_rules.md
ops/: com.aiintegraterz.cold-email.reply-loop.plist  com.aiintegraterz.cold-email.slack-agent.plist  install.sh  run-with-env.sh  status.sh  uninstall.sh  watchdog.sh
orchestrator/: cleanup.py  council.py  main.py  precreate.py  reply_loop.py  slack_agent.py  spawner.py  stats.py  supervisor.py  worker.py
scripts/: bulk_personalize.py  rebuild_csv_from_cache.py
squads/: _base.py
tests/: test_reply_pipeline.py  test_slack_agent.py  test_smoke_forge.py  test_task_ledger.py
tools/: csv_to_smartlead.py  lead_loader.py  prospect_filters.py  slack_notify.py  smartlead.py  smartlead_cli.py  task_ledger.py
(+52 files in other folders)
