[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cold-email-2"
version = "0.1.0"
description = "Cold Email 2.0 — Opus-orchestrated forge swarm for personalized cold email at scale on Smartlead"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Justin Bell" }]

dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
cold-email = "orchestrator.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator", "squads", "tools"]
